--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
@@ -8,13 +8,13 @@
     xmlns:ideThemes="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEThemes"
     xmlns:helpers="using:Brainf_ck_sharp_UWP.Helpers"
     xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
+    xmlns:jumpList="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList"
+    xmlns:settings="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.Settings"
+    xmlns:templateSelectors="using:Brainf_ck_sharp_UWP.TemplateSelectors"
     mc:Ignorable="d"
     d:DesignHeight="800"
     d:DesignWidth="400">
     <UserControl.Resources>
-        
-        <!--Visibility converter-->
-        <converters:BoolToInvertedVisibilityConverter x:Key="InvertedConverter"/>
         
         <!--Section style-->
         <Style TargetType="TextBlock" x:Key="SectionTitleStyle">
@@ -22,225 +22,67 @@
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Foreground" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
         </Style>
+        
+        <!--Section template selector-->
+        <templateSelectors:SettingsSectionTemplateSelector x:Key="SectionSelector"/>
+        
+        <!--IDE template-->
+        <DataTemplate x:Key="IDESettingsTemplate">
+            <settings:IDESettingsSection/>
+        </DataTemplate>
+        
+        <!--UI template-->
+        <DataTemplate x:Key="UISettingsTemplate">
+            <settings:UISettingsSection/>
+        </DataTemplate>
     </UserControl.Resources>
 
     <!--Root-->
-    <ScrollViewer>
-        <StackPanel Margin="12,12,16,0">
+    <Grid>
+        
+        <!--Main content-->
+        <SemanticZoom 
+            Style="{StaticResource SemanticZoomCustomStyle}"
+            Grid.ColumnSpan="2">
+            <SemanticZoom.ZoomedInView>
 
-            <!--IDE-->
-            <TextBlock
-                Text="IDE"
-                Style="{StaticResource SectionTitleStyle}"/>
-
-            <!--Autosave-->
-            <TextBlock
-                Margin="0,8,0,0"
-                TextWrapping="Wrap"
-                VerticalAlignment="Center"
-                x:Uid="AutosaveTitle"
-                Text="Autosave loaded documents"/>
-            <ToggleSwitch IsOn="{x:Bind ViewModel.AutosaveDocuments, Mode=TwoWay}"/>
-
-            <!--Auto indent-->
-            <TextBlock
-                Margin="0,8,0,0"
-                TextWrapping="Wrap"
-                VerticalAlignment="Center"
-                x:Uid="AutoIndentTitle"
-                Text="Auto indent brackets"/>
-            <ToggleSwitch IsOn="{x:Bind ViewModel.AutoindentBrackets, Mode=TwoWay}"/>
-
-            <!--Brackets style-->
-            <TextBlock
-                Margin="0,8,0,0"
-                Text="Brackets style"
-                x:Uid="BracketsStyleTitle"/>
-            <inheritedControls:AnimatedComboBox
-                Margin="0,8,0,0"
-                ItemContainerStyle="{StaticResource FluentComboBoxItemContainerStyle}"
-                ItemsSource="{x:Bind ViewModel.BracketsStyleOptions}"
-                SelectedIndex="{x:Bind ViewModel.BracketsStyleSelectedIndex, Mode=TwoWay}"
-                IsEnabled="{x:Bind ViewModel.AutoindentBrackets, Mode=OneWay}"
-                MinWidth="180"/>
-
-            <!--Tab length-->
-            <TextBlock
-                Margin="0,16,0,0"
-                Text="Tab length"
-                x:Uid="TabLength"/>
-            <inheritedControls:AnimatedComboBox
-                Margin="0,8,0,0"
-                ItemContainerStyle="{StaticResource FluentComboBoxItemContainerStyle}"
-                ItemsSource="{x:Bind ViewModel.TabLengthOptions}"
-                SelectedIndex="{x:Bind ViewModel.TabLengthSelectedIndex, Mode=TwoWay}"
-                MinWidth="180"/>
-
-            <!--Render whitespaces-->
-            <TextBlock
-                Margin="0,16,0,0"
-                TextWrapping="Wrap"
-                VerticalAlignment="Center"
-                x:Uid="RenderWhitespacesTitle"
-                Text="Render whitespaces"/>
-            <ToggleSwitch IsOn="{x:Bind ViewModel.RenderWhitespaces, Mode=TwoWay}"/>
-
-            <!--Font-->
-            <TextBlock
-                Margin="0,8,0,0"
-                Text="Font type"
-                x:Uid="FontTypeTitle"/>
-            <inheritedControls:AnimatedComboBox
-                Margin="0,8,0,0"
-                ItemContainerStyle="{StaticResource FluentComboBoxItemContainerStyle}"
-                ItemsSource="{x:Bind ViewModel.AvailableFonts}"
-                SelectedIndex="{x:Bind ViewModel.FontFamilySelectedIndex, Mode=TwoWay}"
-                MinWidth="180"
-                Height="40">
-                <inheritedControls:AnimatedComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <Viewbox 
-                            Margin="0,4,0,4"
-                            HorizontalAlignment="Left"
-                            StretchDirection="DownOnly">
-                            <TextBlock 
-                                Text="{Binding Name}"
-                                FontFamily="{Binding Family}"
-                                TextTrimming="CharacterEllipsis"
-                                FontSize="16"
-                                TextWrapping="NoWrap"
-                                IsTextScaleFactorEnabled="False"/>
-                        </Viewbox>
-                    </DataTemplate>
-                </inheritedControls:AnimatedComboBox.ItemTemplate>
-            </inheritedControls:AnimatedComboBox>
-
-            <!--IDE theme-->
-            <TextBlock
-                Margin="0,16,0,0"
-                Text="Theme"
-                x:Uid="IDETheme"/>
-            <Grid Margin="0,8,0,00">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-
-                <!--Theme selector-->
-                <inheritedControls:AnimatedComboBox
-                    ItemsSource="{x:Bind ViewModel.AvailableIDEThemes}"
-                    SelectedIndex="{x:Bind ViewModel.IDEThemeSelectedIndex, Mode=TwoWay}"
-                    ItemContainerStyle="{StaticResource ComboBoxWithoutSelectedVisualStatesStyle}"
-                    MinWidth="180"
-                    MinHeight="108"
-                    Padding="1,1,0,1"
-                    x:Name="ThemeSelector"
-                    IsHitTestVisible="{x:Bind ViewModel.ThemesSelectorEnabled, Mode=OneWay, FallbackValue=False}">
-                    <inheritedControls:AnimatedComboBox.ItemTemplateSelector>
-                        <helpers:ComboBoxDataTemplateSelector>
-                            <helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
+                <!--ZoomedInView-->
+                <ListView 
+                    ItemsSource="{x:Bind ViewModel.View, Mode=OneWay}"
+                    ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    IsItemClickEnabled="False"
+                    ItemTemplateSelector="{StaticResource SectionSelector}">
+                    <ListView.GroupStyle>
+                        <GroupStyle HeaderContainerStyle="{StaticResource GroupsViewListHeaderStyle}">
+                            <GroupStyle.HeaderTemplate>
                                 <DataTemplate>
-                                    <ideThemes:IDEThemePreviewTemplate 
-                                        MinWidth="180"
-                                        MinHeight="108"
-                                        Theme="{Binding}"/>
+                                    <jumpList:JumpListZoomedInHeaderTemplate
+                                        Margin="12,8,16,4"
+                                        Title="{Binding Key.Item1}"/>
                                 </DataTemplate>
-                            </helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
-                            <helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
-                                <DataTemplate>
-                                    <ideThemes:IDEThemeDropDownPreviewTemplate 
-                                        MinWidth="180"
-                                        MinHeight="108"
-                                        Theme="{Binding}"/>
-                                </DataTemplate>
-                            </helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
-                        </helpers:ComboBoxDataTemplateSelector>
-                    </inheritedControls:AnimatedComboBox.ItemTemplateSelector>
-                </inheritedControls:AnimatedComboBox>
+                            </GroupStyle.HeaderTemplate>
+                        </GroupStyle>
+                    </ListView.GroupStyle>
+                </ListView>
+            </SemanticZoom.ZoomedInView>
+            <SemanticZoom.ZoomedOutView>
 
-                <!--Unlock button-->
-                <Grid
-                    Width="{Binding ElementName=ThemeSelector, Path=ActualWidth}"
-                    Height="{Binding ElementName=ThemeSelector, Path=ActualHeight}"
-                    Grid.Column="0"
-                    Background="#A0000000"
-                    IsHitTestVisible="False"
-                    Visibility="{x:Bind ViewModel.ThemesSelectorEnabled, Converter={StaticResource InvertedConverter}, Mode=OneWay, FallbackValue=Visible}"/>
-                <Button
-                    Grid.Column="0"
-                    Style="{StaticResource WideButtonWithNoBackgroundAndBorderStyle}"
-                    Width="{Binding ElementName=ThemeSelector, Path=ActualWidth}"
-                    Height="{Binding ElementName=ThemeSelector, Path=ActualHeight}"
-                    HorizontalAlignment="Left"
-                    Visibility="{x:Bind ViewModel.ThemesUnlockButtonEnabled, Mode=OneWay, FallbackValue=Collapsed}"
-                    Click="{x:Bind ViewModel.TryPurchaseThemesPackAsync}">
-                    <Grid Background="Transparent">
-                        <StackPanel VerticalAlignment="Center">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                TextAlignment="Center"
-                                IsTextScaleFactorEnabled="False"
-                                Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
-                                Text="&#xE1F7;"
-                                FontFamily="Segoe MDL2 Assets"
-                                FontSize="32"/>
-                            <TextBlock
-                                Margin="0,8,0,0"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                TextAlignment="Center"
-                                IsTextScaleFactorEnabled="False"
-                                Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
-                                Text="Tap to unlock"
-                                FontSize="14"
-                                x:Uid="TapToUnlock"
-                                FontWeight="SemiBold"/>
-                        </StackPanel>
-                    </Grid>
-                </Button>
-
-                <!--Loading ring-->
-                <ProgressRing
-                    Grid.Column="1"
-                    IsActive="{x:Bind ViewModel.ThemesPackLicenseLoading, Mode=OneWay, FallbackValue=True}"
-                    Width="24"
-                    Height="24"
-                    Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
-                    Margin="24,0,0,0"
-                    HorizontalAlignment="Left"/>
-            </Grid>
-
-            <!--UI-->
-            <TextBlock
-                Margin="0,20,0,0"
-                Text="UI"
-                Style="{StaticResource SectionTitleStyle}"/>
-
-            <!--Blur mode-->
-            <TextBlock
-                Margin="0,8,0,0"
-                x:Uid="BlurModeTitle"
-                Text="Preferred blur mode"/>
-            <inheritedControls:AnimatedComboBox
-                Margin="0,8,0,0"
-                ItemContainerStyle="{StaticResource FluentComboBoxItemContainerStyle}"
-                ItemsSource="{x:Bind ViewModel.BlurModeOptions}"
-                SelectedIndex="{x:Bind ViewModel.BlurModeSelectedIndex, Mode=TwoWay}"
-                IsEnabled="{x:Bind ViewModel.HostBlurOptionSupported}"
-                MinWidth="180"/>
-
-            <!--Show status bar-->
-            <TextBlock
-                Margin="0,16,0,0"
-                TextWrapping="Wrap"
-                VerticalAlignment="Center"
-                x:Uid="ShowStatusBarTitle"
-                Text="Show status bar"/>
-            <ToggleSwitch 
-                IsEnabled="{x:Bind ViewModel.StatusBarSupported}"
-                IsOn="{x:Bind ViewModel.ShowStatusBar, Mode=TwoWay}"
-                Margin="0,0,0,12"/>
-        </StackPanel>
-    </ScrollViewer>
+                <!--ZoomedOutView-->
+                <ListView 
+                    ItemsSource="{x:Bind ViewModel.CollectionGroups, Mode=OneWay}"
+                    Style="{StaticResource GenericJumpListPickerStyle}"
+                    ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <jumpList:JumpListZoomedOutHeaderTemplate
+                                Title="{Binding Group.Key.Item1}"
+                                Description="{Binding Group.Key.Item2}"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </SemanticZoom.ZoomedOutView>
+        </SemanticZoom>
+    </Grid>
 </UserControl>
