--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/UISettingsSection.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/UISettingsSection.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.Settings.UISettingsSection"
+    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.Settings.Sections.UISettingsSection"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
