--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -310,33 +310,38 @@
                 </xaml:CanvasControl.RenderTransform>
             </xaml:CanvasControl>
         </Canvas>
-        
-        <!--Current line cursor-->
-        <Canvas 
+
+        <!--Current line highlight-->
+        <Canvas
             Grid.Column="4"
             IsHitTestVisible="False"
-            SizeChanged="LineCursorCanvas_SizeChanged">
-            <Canvas.Clip>
-                <RectangleGeometry x:Name="LineCursorClip"/>
-            </Canvas.Clip>
-            
-            <!--Current line highlight-->
+            Canvas.ZIndex="1"
+            x:Name="CursorBorderParentCanvas">
             <Border 
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 Height="20"
                 BorderThickness="2"
                 BorderBrush="#30FFFFFF"
-                x:Name="CursorBorder"
-                Canvas.ZIndex="1">
+                x:Name="CursorBorder">
                 <Border.RenderTransform>
                     <TranslateTransform x:Name="CursorBorderTransform"/>
                 </Border.RenderTransform>
             </Border>
+        </Canvas>
+
+        <!--Current line cursor-->
+        <Canvas 
+            Grid.Column="4"
+            IsHitTestVisible="False"
+            SizeChanged="LineCursorCanvas_SizeChanged"
+            Canvas.ZIndex="2">
+            <Canvas.Clip>
+                <RectangleGeometry x:Name="LineCursorClip"/>
+            </Canvas.Clip>
             
             <!--Virtual cursor-->
             <Rectangle
-                Canvas.ZIndex="2"
                 Width="1"
                 Height="20"
                 Fill="LightGray"
