--- a/Brainf_ck-sharp.UWP/PopupService/UI/NotificationPopup.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/NotificationPopup.xaml
@@ -4,26 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:xaml="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
     d:DesignHeight="150"
     d:DesignWidth="300"
     Width="300">
 
-    <!--Root StackPanel-->
-    <Grid>
+    <!--Root-->
+    <Grid x:Name="Root">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <!--Background-->
-        <Border 
-            x:Name="AcrylicBorder"
-            Grid.RowSpan="2"/>
-        <xaml:CanvasControl 
-            Grid.Row="0"
-            x:Name="Win2DCanvas"/>
         
         <!--Header-->
         <Grid 
@@ -71,7 +62,7 @@
 
                     <!--Light border-->
                     <Border
-                        Opacity="0.4"
+                        Opacity="0.2"
                         x:Name="LightBorder"
                         BorderThickness="1"
                         BorderBrush="{StaticResource BorderLightBrush}"
