Added PBrain operators to the virtual keyboard

--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
@@ -34,7 +34,8 @@
             <!--Content-->
             <StackPanel
                 VerticalAlignment="Center"
-                HorizontalAlignment="Center">
+                HorizontalAlignment="Center"
+                x:Name="IconsPanel">
                 <TextBlock 
                     Text="+"
                     TextAlignment="Center"
