--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -30,6 +30,11 @@
         <converters:SingleDigitConverterWithFallback x:Key="DepthDigitConverter"/>
         <converters:DisplayScalingToMarginConverter x:Key="DPIToMarginConverter"/>
         
+        <!--Brushes-->
+        <SolidColorBrush x:Key="PBrainIndicatorBackgroundBrush" Color="#A0000000"/>
+        <SolidColorBrush x:Key="BracketsIndicatorBorderBrush" Color="DarkGray"/>
+        <SolidColorBrush x:Key="BracketsIndicatorTextForegroundBrush" Color="GhostWhite"/>
+        
         <!--Indentation guide info-->
         <DataTemplate x:Key="IDEIndentationInfoOpenBracketTemplate">
             <Grid 
@@ -43,12 +48,12 @@
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     VerticalAlignment="Stretch"
                     Visibility="{Binding Depth, Converter={StaticResource DepthConverter}, FallbackValue=Collapsed}"/>
                 <Border
                     BorderThickness="1"
-                    BorderBrush="DarkGray"
+                    BorderBrush="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="1">
                     <TextBlock
                         VerticalAlignment="Center"
@@ -56,13 +61,13 @@
                         Text="{Binding Depth, Converter={StaticResource DepthDigitConverter}, ConverterParameter=•}"
                         IsTextScaleFactorEnabled="False"
                         FontSize="8"
-                        Foreground="GhostWhite"
+                        Foreground="{StaticResource BracketsIndicatorTextForegroundBrush}"
                         Margin="{Binding Converter={StaticResource DPIToMarginConverter}}"/>
                 </Border>
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="2"
                     VerticalAlignment="Stretch"/>
             </Grid>
@@ -81,12 +86,12 @@
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     VerticalAlignment="Stretch"
                     Visibility="{Binding Depth, Converter={StaticResource DepthConverter}, FallbackValue=Collapsed}"/>
                 <Border
                     BorderThickness="1"
-                    BorderBrush="DarkGray"
+                    BorderBrush="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="1">
                     <TextBlock
                         VerticalAlignment="Center"
@@ -94,13 +99,13 @@
                         Text="{Binding Depth, Converter={StaticResource DepthDigitConverter}, ConverterParameter=•}"
                         IsTextScaleFactorEnabled="False"
                         FontSize="8"
-                        Foreground="GhostWhite"
+                        Foreground="{StaticResource BracketsIndicatorTextForegroundBrush}"
                         Margin="{Binding Converter={StaticResource DPIToMarginConverter}}"/>
                 </Border>
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="2"
                     VerticalAlignment="Stretch"/>
                 <Rectangle
@@ -109,7 +114,7 @@
                     Width="6"
                     Height="1"
                     Grid.Row="2"
-                    Fill="DarkGray"/>
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
             </Grid>
         </DataTemplate>
 
@@ -126,7 +131,7 @@
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     VerticalAlignment="Stretch"
                     Visibility="{Binding Nested, FallbackValue=Collapsed}"/>
                 <Grid Grid.Row="1">
@@ -135,26 +140,26 @@
                         VerticalAlignment="Center"
                         Height="12"
                         Width="12"
-                        Fill="DarkGray"/>
+                        Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
                     <Ellipse
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Height="10"
                         Width="10"
-                        Fill="#80000000"/>
+                        Fill="{StaticResource PBrainIndicatorBackgroundBrush}"/>
                     <TextBlock
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Text="f"
                         IsTextScaleFactorEnabled="False"
                         FontSize="8"
-                        Foreground="GhostWhite"
+                        Foreground="{StaticResource BracketsIndicatorTextForegroundBrush}"
                         Margin="{Binding Converter={StaticResource DPIToMarginConverter}}"/>
                 </Grid>
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="2"
                     VerticalAlignment="Stretch"/>
             </Grid>
@@ -173,7 +178,7 @@
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     VerticalAlignment="Stretch"
                     Visibility="{Binding Nested, FallbackValue=Collapsed}"/>
                 <Grid Grid.Row="1">
@@ -182,26 +187,26 @@
                         VerticalAlignment="Center"
                         Height="12"
                         Width="12"
-                        Fill="DarkGray"/>
+                        Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
                     <Ellipse
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Height="10"
                         Width="10"
-                        Fill="#80000000"/>
+                        Fill="{StaticResource PBrainIndicatorBackgroundBrush}"/>
                     <TextBlock
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Text="f"
                         IsTextScaleFactorEnabled="False"
                         FontSize="8"
-                        Foreground="GhostWhite"
+                        Foreground="{StaticResource BracketsIndicatorTextForegroundBrush}"
                         Margin="{Binding Converter={StaticResource DPIToMarginConverter}}"/>
                 </Grid>
                 <Rectangle
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"
                     Grid.Row="2"
                     VerticalAlignment="Stretch"/>
                 <Rectangle
@@ -210,7 +215,7 @@
                     Width="6"
                     Height="1"
                     Grid.Row="2"
-                    Fill="DarkGray"/>
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
             </Grid>
         </DataTemplate>
 
@@ -220,7 +225,7 @@
                 HorizontalAlignment="Center"
                 Width="1"
                 Height="19.94998046875"
-                Fill="DarkGray"/>
+                Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
         </DataTemplate>
         
         <!--Closed bracket-->
@@ -232,13 +237,13 @@
                     VerticalAlignment="Stretch"
                     HorizontalAlignment="Center"
                     Width="1"
-                    Fill="DarkGray"/>
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
                 <Rectangle
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Width="6"
                     Height="1"
-                    Fill="DarkGray"/>
+                    Fill="{StaticResource BracketsIndicatorBorderBrush}"/>
             </Grid>
         </DataTemplate>
 
